syntax = "proto3";

package pb;

option go_package = "github.com/techschool/simplebank/pb";

message ForgotPasswordRequest {
    string email = 1;
}

message ForgotPasswordResponse {
    bool code_is_sent = 1;
}